Fixed z-index on banner

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -960,7 +960,7 @@ body {
 
   .inner {
     position: relative;
-    z-index: 2;
+    z-index: 12;
   }
 
   .header-title {
